# lisp-interpreter

./: CMakeLists.txt  README.md
lib/: mpc.c  mpc.h
src/: builtins.c  builtins.h  env.c  env.h  eval.c  eval.h  main.c  parser.c  parser.h  repl.c  repl.h  types.c  types.h
tests/: logic_tests.c  logic_tests.h
